# insight

./: Cargo.toml
src/: blueprint.rs  calculace_crunch.rs  calculace_dyn.rs  fs.rs  int_convert.rs  main.rs  vec_multiple_mutable.rs
