[package]
name = "insight"
version = "0.1.0"
authors = ["darkphx ( @dark_#0368 )"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
clap = "3.0.0-beta.2"